Sun May 17 13:15:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_vm_get_sourceline): should not access out of bound.

Sun May 17 09:47:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (cmdline_options_init): initialize encodings.

	* ruby.c (add_modules, require_libraries, process_sflag):

	* ruby.c (process_sflag): not process twice.

	* ruby.c (moreswitches): get rid of possible overflow.

Sun May 17 09:31:05 2009  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (foletypelib_name): should return
	  encoded name corresponding to WIN32OLE.codepage.

Sun May 17 09:02:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): support for cygwin 1.7.  see
	  [ruby-core:23241].
	  gets rid of possible buffer overflow with realpath().

	* ruby.c (set_arg0): get rids of overrun.

Sat May 16 18:38:32 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb: add nil check.

Sat May 16 18:36:01 2009  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/test_maker_atom_feed.rb: suppress warnings.

Sat May 16 18:33:15 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: add RSS::Maker.supported?(version).

Sat May 16 18:26:42 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb, test/test_parser_1.0.rb: fix foaf:Image
	element causes parse error even if ignore_unknown_element mode.

Sat May 16 18:14:19 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb, lib/rss/maker/0.9.rb,
	test/test_maker_*.rb: add RSS::Maker.supported?

Sat May 16 18:12:39 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/content/*, lib/rss/dublincore/*: fix circular require.
	* test/test_maker_atom_feed.rb,
	test/test_maker_atom_entry.rb: suppress warnings.

Sat May 16 18:07:17 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_feed.rb:
	remove needless codes.

Sat May 16 18:05:07 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/entry.rb: fix a typo.
