@@ -1,4 +1,8 @@
-Sun May 17 13:15:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sun May 17 14:02:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ruby.c (ruby_script): sets also VM toplevel program name.
+
+	* ruby.c (process_options): no longer needs additional frame.
 
 	* vm.c (rb_vm_get_sourceline): should not access out of bound.
 
